# python-project-52

./: .djlintrc  .env_copy  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml
deploy/: extract_deps.sh
deploy/pythonanywhere/: .env_copy  README.md  load_env.sh  run_server.sh  setup_cron.sh  wsgi_config_example.py
task_manager/: conftest.py  context_processors.py  debug_view.py  env_config.py  env_debug_view.py  forms.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py
task_manager/statuses/: forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_views.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/partials/: footer.html  messages.html  navbar.html
task_manager/tests/: builders.py  test_forms.py  test_views.py  utils.py
task_manager/tests/e2e/: _test_users_playwright.py  test_home_page.py  test_task_create.py  test_user_create.py  test_user_create_page.py  test_user_update.py  test_users_playwright.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: conftest.py  test_forms.py  (+2 more)
task_manager/utils/: debug.py  request.py
(+23 files in other folders)
