[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["paalso <40a.pvl@gmail.com>", "paalso <paalso@gmail.com>"]
packages = [
    {include = "task_manager"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.3",
    "django-bootstrap5>=25.1",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ipython>=9.3.0",
    "ruff>=0.11.13",
]
