[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = [
    { name = "paalso", email = "40a.pvl@gmail.com" },
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.9.2",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=5.2.3",
    "django-bootstrap5>=25.1",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ipython>=9.3.0",
    "pytest-django>=4.11.1",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
